--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/todo2.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/colorgame.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -340,12 +340,14 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Todo List</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Color game</h2>
             <hr class="star-portfolio mb-5">
-            <a href="todo/todo.html">
-              <img class="img-fluid mb-5" src="img/portfolio/todo2.jpg" alt="">
+<!--            <a href="todo/todo.html">-->
+                 <a href="colorgame/colorgame.html">
+             <!-- <img class="img-fluid mb-5" src="img/portfolio/todo2.jpg" alt="">-->
+                      <img class="img-fluid mb-5" src="img/portfolio/colorgame.jpg" alt="">
             </a>
-            <p class="mb-5">A digital notepad.</p>
+            <p class="mb-5">A RGB color quiz.</p>
             <p class="mb-1 italic">Click image to open </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
